Added background video for hero, image to work as poster when loading video, as well as editing style.css and index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,41 @@
     <link rel="stylesheet" href="./src/css/style.css">
 </head>
 <body>
-    
+        <header class="header">
+            <nav class="nav">
+                <img class="nav__brand-logo"src="./src/img/logo/bonz.ai-logo-white-symbol.png" alt="Företagslogga">
+                
+                <ul class="nav__menu">
+                    <li class="nav__menu-item"><a href="">Lediga rum</a></li>
+                    <li class="nav__menu-item"><a href="">Mat & dryck</a></li>
+                    <li class="nav__menu-item"><a href="">Om oss</a></li>
+                    <li class="nav__menu-item"><a href="">Kontakt</a></li>
+                </ul>
+            </nav>
+        </header>
+<main class="main">
+        <section class="hero">
+            <section class="hero__text-container">
+                <h1 class="hero__header">Bonz.AI</h1>
+                <h2 class="hero__sub-header">Brings you as close to nature as technically possible</h2>    
+            </section>
+            <video autoplay muted loop class="hero__video" ><source src="./src/vid/hero-video.mp4" type="video/mp4"></video>
+
+        </section>
+
+        <section class="text-and-image__row">
+            <section class="text-and-image__content"></section>
+            <section class="text-and-image__image"></section>
+        </section>
+
+        <section class="text-and-image__column">
+            <section class="text-and-image__image-section"></section>
+            <section class="text-and-image__content-section"></section>
+        </section>
+    </main>
+    <footer class="footer">
+<!-- Allmän info om företaget -->
+    </footer>
+
 </body>
 </html>
