--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
         <header class="header">
             <nav class="nav">
-                <img class="nav__brand-logo"src="./src/img/logo/bonz.ai-logo-white-symbol.png" alt="Företagslogga">
-                
+                <figure class="nav__brand-logo"></figure>
                 <ul class="nav__menu">
                     <li class="nav__menu-item"><a href="">Lediga rum</a></li>
                     <li class="nav__menu-item"><a href="">Mat & dryck</a></li>
@@ -21,17 +20,26 @@
         </header>
 <main class="main">
         <section class="hero">
-            <section class="hero__text-container">
+            <section class="hero__content-container">
                 <h1 class="hero__header">Bonz.AI</h1>
                 <h2 class="hero__sub-header">Brings you as close to nature as technically possible</h2>    
+                <section class="hero__angle-down-section">
+                    <span class="hero__angle-down-icon"></span>
+                    <span class="hero__angle-down-icon"></span>
+                </section>
             </section>
             <video autoplay muted loop class="hero__video" ><source src="./src/vid/hero-video.mp4" type="video/mp4"></video>
 
         </section>
 
         <section class="text-and-image__row">
-            <section class="text-and-image__content"></section>
-            <section class="text-and-image__image"></section>
+            <section class="text-and-image__content-section">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore optio doloribus placeat voluptatibus minus delectus! Ut fuga neque quos ad, nobis a hic reprehenderit doloremque quod ipsam harum veniam autem.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat dolore quidem inventore magni debitis nihil alias voluptate aut error suscipit?</p>
+            </section>
+            <section class="text-and-image__image-section">
+                <img src="./src/img/photos/02-day.jpg" alt="">
+            </section>
         </section>
 
         <section class="text-and-image__column">
