syncing up between devices

--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
 
         <section class="text-and-image__row">
             <section class="text-and-image__content-section">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore optio doloribus placeat voluptatibus minus delectus! Ut fuga neque quos ad, nobis a hic reprehenderit doloremque quod ipsam harum veniam autem.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat dolore quidem inventore magni debitis nihil alias voluptate aut error suscipit?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, voluptatem.</p>
+                <a href="/">LÄS MER</a>
+            
             </section>
             <section class="text-and-image__image-section">
                 <img src="./src/img/photos/02-day.jpg" alt="">
@@ -43,7 +44,9 @@
         </section>
 
         <section class="text-and-image__column">
-            <section class="text-and-image__image-section"></section>
+            <section class="text-and-image__image-section">
+                <img src="./src/img/photos/05-day.jpg" alt="">
+            </section>
             <section class="text-and-image__content-section"></section>
         </section>
     </main>
