--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./src/css/style.css">
 </head>
 <body>
-        <header class="header">
+        <header class="header" id="header">
             <nav class="nav">
                 <figure class="nav__brand-logo"></figure>
                 <ul class="nav__menu">
@@ -21,7 +21,7 @@
 <main class="main">
         <section class="hero">
             <section class="hero__content-container">
-                <h1 class="hero__header">Bonz.AI</h1>
+                <h1 class="hero__header">Bonz.ai</h1>
                 <h2 class="hero__sub-header">Brings you as close to nature as technically possible</h2>    
                 <section class="hero__angle-down-section">
 <span class="hero__angle-down-icon"></span>
@@ -48,8 +48,13 @@
         </section>
     </main>
     <footer class="footer">
+        <span class="footer__line"></span>
+        <section class="footer__company-logo">
+
+        </section>
 <!-- Allmän info om företaget -->
     </footer>
+    <script src="./src/js/script.js"></script>
 
 </body>
 </html>
