Fixing alot of stuff

--- a/src/pages/food-drink.html
+++ b/src/pages/food-drink.html
@@ -1,67 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bonz.AI</title>
-    <link rel="stylesheet" href="./src/css/style.css">
-</head>
+    <link rel="stylesheet" href="../css/style.css">
 
+</head>
 <body>
 
     <!-- HEADER -->
 
     <header class="header" id="header">
         <nav class="nav">
-            <a href="#"><figure class="nav__brand-logo"></figure></a>
-
+            <a href="../../index.html"><figure class="nav__brand-logo"></figure></a>
             <label class="nav__hamburger">
                 <input type="checkbox">
 
             </label>
             <ul class="nav__menu">
-                <li class="nav__menu-item"><a href="./src/pages/booking.html">Boka boende</a></li>
-                <li class="nav__menu-item"><a href="./src/pages/food-drink.html">Mat & dryck</a></li>
-                <li class="nav__menu-item"><a href="./src/pages/about.html">Om oss</a></li>
-                <li class="nav__menu-item"><a href="./src/pages/contact.html">Kontakt</a></li>
+                <li class="nav__menu-item"><a href="./booking.html">Boka boende</a></li>
+                <li class="nav__menu-item"><a href="#main">Mat & dryck</a></li>
+                <li class="nav__menu-item"><a href="./about.html">Om oss</a></li>
+                <li class="nav__menu-item"><a href="./contact.html">Kontakt</a></li>
             </ul>
         </nav>
     </header>
     <!-- /HEADER -->
 
-    <!-- MAIN -->    
-    <main class="main" id="main">
+    <!-- MAIN -->
 
-        <section class="hero">
-            <section class="hero__content-container">
-                <h1 class="hero__header">Bonz.ai</h1>
-                <h2 class="hero__sub-header">Brings you as close to nature as technically possible</h2>
-                <a href="#text-and-image__intro" class="hero__angle-down-section">
-                    <span class="hero__angle-down-icon"></span>
-                    <span class="hero__angle-down-icon"></span>
-                </a>
-            </section>
-            <video autoplay muted loop class="hero__video">
-                <source src="./src/vid/hero-video.mp4" type="video/mp4">
-            </video>
-
-        </section>
-
-        <section id="text-and-image__intro" class="text-and-image__row">
-            <section class="text-and-image__content-section">
-                <h3 class="text-and-image__content-header">Njut av avskildheten</h3>
-                <p class="text-and-image__content-sub-header">Behöver du något kvickt? Använd dig av vår drönar service så löser vi det snabbt!</p>
-                <a href="/">LÄS MER</a>
-
-            </section>
-            <section class="text-and-image__image-section">
-
-            </section>
-        </section>
-
-
-        </section>
+    <main class="main">
+        
     </main>
 
     <!-- /MAIN -->
@@ -98,5 +68,4 @@
     <script src="./src/js/script.js"></script>
 
 </body>
-
 </html>
