fixing cards for rooms

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- HEADER -->
 
-    <header class="header" id="header">
+    <header class="header header--scrolled-up" id="header">
         <nav class="nav">
             <a href="#"><figure class="nav__brand-logo"></figure></a>
 
