--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -11,7 +11,7 @@
 
     <!-- HEADER -->
 
-    <header class="header" id="header">
+    <header class="header header--scrolled-up" id="header">
         <nav class="nav">
             <a href="../../index.html"><figure class="nav__brand-logo"></figure></a>
 
@@ -32,7 +32,13 @@
     <!-- MAIN -->
 
     <main class="main" id="main">
-        
+        <section class="main__about-section about-section">
+            
+            <h1 class="about__header">bonz.ai</h1>
+            <h2 class="about__sub-header">Brings you as close to nature as technically possible</h2>
+
+
+        </section>
     </main>
 
     <!-- /MAIN -->
