--- a/src/pages/booking.html
+++ b/src/pages/booking.html
@@ -13,7 +13,7 @@
 
     <!-- HEADER -->
 
-    <header class="header" id="header">
+    <header class="header header--scrolled-up" id="header">
         <nav class="nav">
             <a href="../../index.html">
                 <figure class="nav__brand-logo"></figure>
@@ -34,7 +34,7 @@
 
     <!-- MAIN -->
 
-    <main class="main">
+    <main class="main" id="main">
         <sectiion class="main__booking-background"></sectiion>
         <section class="main__booking-section">
 
