--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -11,7 +11,7 @@
 
     <!-- HEADER -->
 
-    <header class="header" id="header">
+    <header class="header header--scrolled-up" id="header">
         <nav class="nav">
             <figure class="nav__brand-logo"></figure>
             <label class="nav__hamburger">
@@ -31,6 +31,9 @@
     <!-- MAIN -->
     <main class="main" id="main">
 
+        <section class="main__about-section">
+
+        </section>
         
     </main>
 
