--- a/src/pages/food-drink.html
+++ b/src/pages/food-drink.html
@@ -11,7 +11,7 @@
 
     <!-- HEADER -->
 
-    <header class="header" id="header">
+    <header class="header header--scrolled-up" id="header">
         <nav class="nav">
             <a href="../../index.html"><figure class="nav__brand-logo"></figure></a>
             <label class="nav__hamburger">
@@ -30,8 +30,10 @@
 
     <!-- MAIN -->
 
-    <main class="main">
-        
+    <main class="main" id="main">
+        <section class="main__food-drink-section">
+            <h1 class="main__food-drink-section-header">Ooops... inget här än! </h1>
+        </section>
     </main>
 
     <!-- /MAIN -->
