--- a/src/pages/_template.html
+++ b/src/pages/_template.html
@@ -11,7 +11,7 @@
 
     <!-- HEADER -->
 
-    <header class="header" id="header">
+    <header class="header header--scrolled-up" id="header">
         <nav class="nav">
             <a href="../../index.html"><figure class="nav__brand-logo"></figure></a>
 
