Mostly finished, a lot added

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <section class="hero">
             <section class="hero__content-container">
-                <h1 class="hero__header">Bonz.ai</h1>
+                <h1 class="hero__header">bonz.ai</h1>
                 <h2 class="hero__sub-header">Brings you as close to nature as technically possible</h2>
                 <a href="#text-and-image__intro" class="hero__angle-down-section">
                     <span class="hero__angle-down-icon"></span>
@@ -48,20 +48,23 @@
 
         </section>
 
-        <section id="text-and-image__intro" class="text-and-image__row">
+        <section id="text-and-image__intro" class="text-and-image">
             <section class="text-and-image__content-section">
                 <h3 class="text-and-image__content-header">Njut av avskildheten</h3>
-                <p class="text-and-image__content-sub-header">Behöver du något kvickt? Använd dig av vår drönar service så löser vi det snabbt!</p>
-                <a href="/">LÄS MER</a>
+                <p class="text-and-image__content-sub-header">Behöver du något kvickt? Använd dig av vår drönar service* så slipper du träffa intelligent liv!</p>
+                <p class="text-and-image__content-footnote"> *Sponsrad av AirBeanz</p>
+                <a href="./src/pages/page-not-found.html">LÄS MER</a>
 
             </section>
-            <section class="text-and-image__image-section">
+            <section class="text-and-image__image-section text-and-image__image-section--landing-image">
 
             </section>
         </section>
 
 
+
         </section>
+        
     </main>
 
     <!-- /MAIN -->
@@ -85,9 +88,9 @@
             <section class="footer__company-links-section">
                 <h2 class="footer__company-links-header">TA REDA PÅ MER</h2>
                 <ul class="footer__company-links-list">
-                    <li class="footer__company-links-list-item"><a href="">Jobba hos oss?</a></li>
-                    <li class="footer__company-links-list-item"><a href="">Nyhetsflöde</a></li>
-                    <li class="footer__company-links-list-item"><a href="">Super secret admin</a></li>
+                    <li class="footer__company-links-list-item"><a href="./src/pages/page-not-found.html">Jobba hos oss?</a></li>
+                    <li class="footer__company-links-list-item"><a href="./src/pages/page-not-found.html">Nyhetsflöde</a></li>
+                    <li class="footer__company-links-list-item"><a href="./src/pages/page-not-found.html">Super secret admin</a></li>
                 </ul>
             </section>
             
