--- a/src/pages/_template.html
+++ b/src/pages/_template.html
@@ -56,17 +56,16 @@
             <section class="footer__company-links-section">
                 <h2 class="footer__company-links-header">TA REDA PÅ MER</h2>
                 <ul class="footer__company-links-list">
-                    <li class="footer__company-links-list-item"><a href="">Jobba hos oss?</a></li>
-                    <li class="footer__company-links-list-item"><a href="">Nyhetsflöde</a></li>
-                    <li class="footer__company-links-list-item"><a href="">Super secret admin</a></li>
-                </ul>
+                    <li class="footer__company-links-list-item"><a href="./page-not-found.html">Jobba hos oss?</a></li>
+                    <li class="footer__company-links-list-item"><a href="./page-not-found.html">Nyhetsflöde</a></li>
+                    <li class="footer__company-links-list-item"><a href="./page-not-found.html">Super secret admin</a></li>                </ul>
             </section>
             
         </section>
     </footer>
 
     <!-- /FOOTER -->
-    <script src="./src/js/script.js"></script>
+    <script src="../js/script.js"></script>
 
 </body>
 </html>
