--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -13,7 +13,8 @@
 
     <header class="header header--scrolled-up" id="header">
         <nav class="nav">
-            <figure class="nav__brand-logo"></figure>
+            <a href="../../index.html"><figure class="nav__brand-logo"></figure></a>
+
             <label class="nav__hamburger">
                 <input type="checkbox">
 
@@ -30,9 +31,9 @@
 
     <!-- MAIN -->
     <main class="main" id="main">
-
+        <section class="main__background"></section>
         <section class="main__about-section">
-
+            <h1 class="main__error-header">Oops.. Ni får vänta med kontaktandet!</h1>
         </section>
         
     </main>
@@ -58,17 +59,16 @@
             <section class="footer__company-links-section">
                 <h2 class="footer__company-links-header">TA REDA PÅ MER</h2>
                 <ul class="footer__company-links-list">
-                    <li class="footer__company-links-list-item"><a href="">Jobba hos oss?</a></li>
-                    <li class="footer__company-links-list-item"><a href="">Nyhetsflöde</a></li>
-                    <li class="footer__company-links-list-item"><a href="">Super secret admin</a></li>
-                </ul>
+                    <li class="footer__company-links-list-item"><a href="./page-not-found.html">Jobba hos oss?</a></li>
+                    <li class="footer__company-links-list-item"><a href="./page-not-found.html">Nyhetsflöde</a></li>
+                    <li class="footer__company-links-list-item"><a href="./page-not-found.html">Super secret admin</a></li>           </ul>
             </section>
             
         </section>
     </footer>
 
     <!-- /FOOTER -->
-    <script src="./src/js/script.js"></script>
+    <script src="../js/script.js"></script>
 
 </body>
 </html>
