--- a/src/pages/rooms.html
+++ b/src/pages/rooms.html
@@ -35,7 +35,7 @@
     <!-- MAIN -->
 
     <main class="main" id="main">
-        <section class="main__rooms-background"></section>
+        <section class="main__background"></section>
 
         <section class="main__rooms-section rooms-section">
 
@@ -53,10 +53,12 @@
                         <ul class="room__info-list">
                             <li class="room__info-list-item">Frukost</li>
                             <li class="room__info-list-item">Tillgång till kajak</li>
-                            <li class="room__info-list-item">En ledsen avokado</li>
+                            <li class="room__info-list-item">Cementblock</li>
                         </ul>
+
                     </section>
-                    <a class="room__accept-button">GÅ VIDARE</a>
+                        <a href="./page-not-found.html" class="room__accept-button">VÄLJ</a>
+
                   </section>
                 </article>
 
@@ -75,7 +77,7 @@
                               <li class="room__info-list-item">En färgblind calypso</li>
                           </ul>
                       </section>
-                      <a class="room__accept-button">GÅ VIDARE</a>
+                      <a href="./page-not-found.html" class="room__accept-button">VÄLJ</a>
                     </section>
                   </article>
 
@@ -94,7 +96,7 @@
                               <li class="room__info-list-item">Såg du sjön?</li>
                           </ul>
                       </section>
-                      <a class="room__accept-button">GÅ VIDARE</a>
+                      <a href="./page-not-found.html" class="room__accept-button">VÄLJ</a>
                     </section>
                   </article>
 
@@ -113,10 +115,28 @@
                               <li class="room__info-list-item">Kanske ett knäckebröd</li>
                           </ul>
                       </section>
-                      <a class="room__accept-button">GÅ VIDARE</a>
+                      <a href="./page-not-found.html" class="room__accept-button">VÄLJ</a>
                     </section>
                   </article>
   
+                  <article class="room">
+                    <section class="room__image">
+                      <img src="../img/photos/07-day.jpg" alt="Bild på stuga 1">
+                    </section>  
+                    <section class="room__details">
+                      <h2 class="room__header">"Zebra" stugan</h2>
+                      <h3 class="room__price">1,500kr/dag</h3>
+                      <section class="room__information">
+                          <h4 class="room__information-header">I priset ingår:</h4>
+                          <ul class="room__info-list">
+                              <li class="room__info-list-item">En hel zebra</li>
+                              <li class="room__info-list-item">Sjukt nära till en sjö</li>
+                              <li class="room__info-list-item">Såg du sjön?</li>
+                          </ul>
+                      </section>
+                      <a href="./page-not-found.html" class="room__accept-button">VÄLJ</a>
+                    </section>
+                  </article>
 
             </section>
         </section>
@@ -145,10 +165,9 @@
             <section class="footer__company-links-section">
                 <h2 class="footer__company-links-header">TA REDA PÅ MER</h2>
                 <ul class="footer__company-links-list">
-                    <li class="footer__company-links-list-item"><a href="">Jobba hos oss?</a></li>
-                    <li class="footer__company-links-list-item"><a href="">Nyhetsflöde</a></li>
-                    <li class="footer__company-links-list-item"><a href="">Super secret admin</a></li>
-                </ul>
+                    <li class="footer__company-links-list-item"><a href="./page-not-found.html">Jobba hos oss?</a></li>
+                    <li class="footer__company-links-list-item"><a href="./page-not-found.html">Nyhetsflöde</a></li>
+                    <li class="footer__company-links-list-item"><a href="./page-not-found.html">Super secret admin</a></li>                </ul>
             </section>
 
         </section>
