--- a/src/pages/food-drink.html
+++ b/src/pages/food-drink.html
@@ -31,8 +31,8 @@
     <!-- MAIN -->
 
     <main class="main" id="main">
-        <section class="main__food-drink-section">
-            <h1 class="main__food-drink-section-header">Ooops... inget här än! </h1>
+        <section class="main__error-section">
+            <h1 class="main__error-header">Ooops... inget här än! </h1>
         </section>
     </main>
 
@@ -57,17 +57,16 @@
             <section class="footer__company-links-section">
                 <h2 class="footer__company-links-header">TA REDA PÅ MER</h2>
                 <ul class="footer__company-links-list">
-                    <li class="footer__company-links-list-item"><a href="">Jobba hos oss?</a></li>
-                    <li class="footer__company-links-list-item"><a href="">Nyhetsflöde</a></li>
-                    <li class="footer__company-links-list-item"><a href="">Super secret admin</a></li>
-                </ul>
+                    <li class="footer__company-links-list-item"><a href="./page-not-found.html">Jobba hos oss?</a></li>
+                    <li class="footer__company-links-list-item"><a href="./page-not-found.html">Nyhetsflöde</a></li>
+                    <li class="footer__company-links-list-item"><a href="./page-not-found.html">Super secret admin</a></li>               </ul>
             </section>
             
         </section>
     </footer>
 
     <!-- /FOOTER -->
-    <script src="./src/js/script.js"></script>
+    <script src="../js/script.js"></script>
 
 </body>
 </html>
